# code2graph

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flux.toml
.github/workflows/: ci.yml  release-pi.yml  release-prepare.yml  release-validate.yml  release.yml  test.yml
benches/: pipeline.rs
bindings/node/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/pi/: README.md  package.json
bindings/python/: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: args.rs  config.rs  deadline.rs  error.rs  exit.rs  lib.rs  main.rs  request.rs  result.rs
cli/src/cache/: codec.rs  fingerprint.rs  location.rs  mod.rs  schema.rs  store.rs  types.rs
cli/src/commands/: definition.rs  diff_impact.rs  impact.rs  imports.rs  mod.rs  module_deps.rs  references.rs  relations.rs  shared.rs  symbols.rs
cli/src/execution/: cache_policy.rs  context.rs  lifecycle.rs  mod.rs  output.rs
cli/src/inventory/: mod.rs  types.rs  walk.rs
cli/src/package_assignment/: apply.rs  discover.rs  mod.rs  types.rs
cli/src/project/: manifest.rs  mod.rs  path.rs  select.rs
cli/src/refresh/: mod.rs  plan.rs  prepare.rs  publish.rs  resolve.rs  types.rs
cli/src/selector/: mod.rs  position.rs  resolve.rs  types.rs
cli/src/worker/: frame.rs  mod.rs  persistent.rs  process.rs  protocol.rs  runtime.rs
cli/src/worker/platform/: mod.rs  unix.rs  windows.rs
cli/tests/: contracts.rs
docs/: ffi-support-matrix.md  supported-languages.md
eval/: REAL-REPO-SCORECARD.md
eval/scripts/: gen-realrepo-oracle.sh
eval/src/: corpus.rs  diagnose.rs  lib.rs  main.rs  runner.rs  score.rs
eval/tests/: regression.rs
query/: Cargo.toml
query/src/: error.rs  impact.rs  lib.rs  order.rs  read.rs  relation.rs
query/src/index/: build.rs  lookup.rs  mod.rs  update.rs
scripts/: stamp-release.py
scripts/release/: artifact_manifest.py  version_contract.py
src/: error.rs  grammar.rs  lang.rs  lib.rs
src/extract/: binding.rs  c.rs  cpp.rs  csharp.rs  dart.rs  dispatch.rs  go.rs  hcl.rs  java.rs  javascript.rs  kotlin.rs  lua.rs  luau.rs  mod.rs  pascal.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  shell.rs  solidity.rs  sql.rs  support.rs  svelte.rs  swift.rs  typescript.rs
src/ffi/: c.rs  jni.rs  mod.rs  node_api.rs  python.rs  spec.rs  sync_tests.rs  wasm.rs
src/graph/: mod.rs  types.rs  validate.rs
src/package/: enrich.rs  manifest.rs  mod.rs
src/resolve/: conformance.rs  external.rs  ffi_bridge.rs  layered.rs  local_typed_call.rs  (+6 more)
tests/: resolver_input_contracts.rs
(+105 files in other folders)
