# SPDX-License-Identifier: Apache-2.0

[package]
name = "code2graph-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Standalone project query and indexing consumer for code2graph."
repository = "https://github.com/nodedb-lab/code2graph"
keywords = ["code-graph", "static-analysis", "cli", "symbols"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "code2graph"
path = "src/main.rs"

[dependencies]
code2graph = { workspace = true, features = ["serde", "manifest"] }
code2graph-query.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ignore = "0.4"
blake3 = "1"
directories.workspace = true
zerompk = { version = "=0.5.0", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_JobObjects"] }

[dev-dependencies]
tempfile = "3"
